# bmad-automator

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCOVERY.md  README.md  SECURITY.md  install.sh  package.json  ruff.toml  verify-setup.sh
skills/bmad-story-automator/: pyproject.toml  workflow.md
skills/bmad-story-automator/data/: agent-config-prompts.md  agent-fallback.md  code-review-loop.md  crash-recovery.md  marker-file-format.md  monitoring-fallback.md  monitoring-pattern.md  orchestration-policy.json  preflight-prompts.md  retry-fallback-implementation.md  retry-fallback-strategy.md  scripts-reference.md  stop-hook-config.md  tmux-commands.md  tmux-long-command-debugging.md  workflow-commands.md
skills/bmad-story-automator/data/profiles/: default.json  msme-erp.invariants.yaml  msme-erp.json
skills/bmad-story-automator/data/prompts/: dev.md
skills/bmad-story-automator/data/templates/msme-erp-golden-template/: manifest.json
skills/bmad-story-automator/src/story_automator/: cli.py
skills/bmad-story-automator/src/story_automator/commands/: _audit_hooks.py  agent_config_cmd.py  audit_verify_cmd.py  basic.py  calibration_cmd.py  ceiling_check.py  doctor.py  drift_cmd.py  gate_cmd.py  lineage_cmd.py  orchestrator.py  orchestrator_epic_agents.py  orchestrator_parse.py  orchestrator_state.py  record_cost.py  state.py  telemetry_report.py  tmux.py  tmux_monitor.py  triage_cmd.py  trust_verify.py  validate_story_creation.py
skills/bmad-story-automator/src/story_automator/core/: action_enum.py  (+109 more)
skills/bmad-story-automator/steps-c/: step-01-init.md  step-01b-continue.md  step-02-preflight.md  step-02b-preflight-finalize.md  step-03-execute.md  step-03a-execute-review.md  step-03ab-spec-compliance.md  step-03b-execute-finish.md
skills/bmad-story-automator/steps-v/: step-v-01-check.md
skills/bmad-story-automator/tests/: _calibration_fixtures.py  test_calibration.py  test_drift_detector.py
(+708 files in other folders)
