[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-automator"
version = "1.15.0"
description = "Python parity port of the BMAD story automator helper"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "BMAD", email = "bmad.directory@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "filelock>=3.13",
  "psutil>=5.9",
]

[project.scripts]
story-automator = "story_automator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/story_automator"]

# The runtime data (policy, prompts, parse contracts, templates, step docs)
# lives outside src/, so a plain package build ships a wheel whose console
# script crashes with "bundled policy not found" on every real command.
# Force-include the skill assets at a package-relative path that
# bundled_story_skill_root()'s parent-walk already resolves
# (<site-packages>/story_automator/skills/bmad-story-automator/...), so the
# installed wheel is self-contained without any resolver change.
[tool.hatch.build.targets.wheel.force-include]
"data" = "story_automator/skills/bmad-story-automator/data"
"templates" = "story_automator/skills/bmad-story-automator/templates"
"steps-c" = "story_automator/skills/bmad-story-automator/steps-c"
"steps-e" = "story_automator/skills/bmad-story-automator/steps-e"
"steps-v" = "story_automator/skills/bmad-story-automator/steps-v"
"workflow.md" = "story_automator/skills/bmad-story-automator/workflow.md"
"SKILL.md" = "story_automator/skills/bmad-story-automator/SKILL.md"
